# Single-tree

./: .gitignore  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  GITHUB_PUSH_INSTRUCTIONS.md  GITHUB_UPLOAD_CHECKLIST.md  LICENSE  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  README_CMAKE.md  SETUP_GIT.md  Single-tree.sln  build.bat  build.sh
Single-tree/: Single-tree.cpp  Single-tree.vcxproj  Single-tree.vcxproj.filters
Single-tree/data/: input.txt
Single-tree/output/: .gitkeep
